<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_graph"
    app:startDestination="@id/filterFragment">

    <fragment
        android:id="@+id/workPlaceFragment"
        android:name="ru.practicum.android.diploma.filter.ui.WorkPlaceFragment"
        tools:layout="@layout/fragment_work_place"
        android:label="@string/choosing_place_of_work_title_tv">
        <action
            android:id="@+id/action_workPlaceFragment_to_countryChooserFragment"
            app:destination="@id/countryChooserFragment" />
        <action
            android:id="@+id/action_workPlaceFragment_to_regionChooserFragment"
            app:destination="@id/regionChooserFragment" />
    </fragment>
    <fragment
        android:id="@+id/regionChooserFragment"
        android:name="ru.practicum.android.diploma.filter.ui.AreaChooserFragment"
        tools:layout="@layout/fragment_area_chooser"
        android:label="@string/choosing_area_title_tv" />
    <fragment
        android:id="@+id/filterFragment"
        android:name="ru.practicum.android.diploma.filter.ui.FilterFragment"
        tools:layout="@layout/fragment_filter"
        android:label="@string/filter_settings_title_tv">
        <action
            android:id="@+id/action_filterFragment_to_workPlaceFragment"
            app:destination="@id/workPlaceFragment" />
        <action
            android:id="@+id/action_filterFragment_to_industryChooserFragment"
            app:destination="@id/industryChooserFragment" />
    </fragment>
    <fragment
        android:id="@+id/countryChooserFragment"
        android:name="ru.practicum.android.diploma.filter.ui.CountryChooserFragment"
        tools:layout="@layout/fragment_country_chooser"
        android:label="@string/choosing_country_title_tv" />
    <fragment
        android:id="@+id/industryChooserFragment"
        android:name="ru.practicum.android.diploma.filter.ui.IndustryChooserFragment"
        tools:layout="@layout/fragment_industry_chooser"
        android:label="@string/choosing_industry_title_tv" />
</navigation>
